Fix overflow of skill list in skill map table in Firefox 	Change on 2015/11/13 by jorr <jorr@google.com> ------------- Created by MOE: https://github.com/google/moe MOE_MIGRATED_REVID=107802065

--- a/coursebuilder/modules/skill_map/_static/css/common.css
+++ b/coursebuilder/modules/skill_map/_static/css/common.css
@@ -5,6 +5,7 @@ ol.skill-display-root {
   list-style-type: none;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 ol.skill-display-root > li.skill {
   display: inline-block;
